# projeto-streamlit-aula02

./: LICENSE  app.py  pyproject.toml
