[project]
name = "teste-streamlit"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "streamlit (>=1.49.1,<2.0.0)",
    "yfinance (>=0.2.65,<0.3.0)"
]

[tool.poetry]
packages = [{include = "teste_streamlit", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
